--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <footer>
         <p>&copy; 2024 PixelSnek. All Rights Reserved.</p>
         <div class="creator-info">
-            <p>Created and owned by <strong>Punkw</strong> | X Handle: <a href="https://twitter.com/punkw_euw" target="_blank">@punkw_euw</a></p>
+            <p>Created and owned by <strong>punkw</strong> | X Handle: <a href="https://twitter.com/punkw_euw" target="_blank">@punkw_euw</a></p>
         </div>
     </footer>
 </body>
